host name padding whitespace correction

--- a/src/pages/logement/_logement.scss
+++ b/src/pages/logement/_logement.scss
@@ -103,12 +103,13 @@
         @include text-14($color: $main-color);
         display: flex;
         align-items: center;
+        padding-right: 5px;
+        white-space: nowrap;
       }
       .logement_host_pic_desktop {
         width: 64px;
         height: 64px;
         border-radius: 50%;
-        margin-left: 10px;
       }
       }
     }
